--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:minimal": "NEXT_SKIP_LINTING=1 NEXT_SKIP_TYPE_CHECK=1 next build",
     "start": "next start",
     "lint": "next lint",
     "build:workers": "npx @cloudflare/next-on-pages",
