Fix staging environment configuration - Use production WordPress backend for staging testing - Update WP_GRAPHQL_URL and WP_API_URL to point to working production endpoints

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -56,11 +56,11 @@ name = "jvs-website-staging"
 
 [[env.staging.vars]]
 name = "WP_GRAPHQL_URL"
-value = "https://staging.jvs.org.uk/graphql"
+value = "https://jvs.org.uk/graphql"
 
 [[env.staging.vars]]
 name = "WP_API_URL"
-value = "https://staging.jvs.org.uk/wp-json"
+value = "https://jvs.org.uk/wp-json/wp/v2"
 
 [[env.staging.vars]]
 name = "WP_USERNAME"
