--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,7 +8,7 @@ compatibility_flags = ["nodejs_compat"]
 main = "worker.js"
 
 [assets]
-directory = "out"
+directory = ".vercel/output/static"
 
 [[d1_databases]]
 binding = "DB"
@@ -19,7 +19,7 @@ database_id = "2b2ca51b-2571-486a-b569-d595f75f9fd8"
 name = "jvs-website"
 
 [env.production.assets]
-directory = "out"
+directory = ".vercel/output/static"
 
 # KV Namespace for storing sensitive data like Stripe keys
 [[env.production.kv_namespaces]]
@@ -79,6 +79,9 @@ value = "pk_test_XXXXXXXX" # TODO: Replace with actual Stripe test publishable k
 [[env.staging.vars]]
 name = "NEXT_PUBLIC_UNIFIED_EVENTS"
 value = "true"
+
+[env.staging.assets]
+directory = ".vercel/output/static"
 
 [[env.staging.d1_databases]]
 binding = "DB"
