--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -46,7 +46,11 @@ jobs:
       run: npm install -g wrangler@latest
       
     - name: Deploy to Cloudflare Workers
-      run: npx wrangler deploy --env production
+      run: |
+        echo "Using Wrangler version:"
+        wrangler --version
+        echo "Deploying to production..."
+        wrangler deploy --env production
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         
