--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -49,10 +49,13 @@ jobs:
       run: |
         echo "Using Wrangler version:"
         wrangler --version
+        echo "Disabling telemetry..."
+        export WRANGLER_TELEMETRY_DISABLED=1
         echo "Deploying to production..."
-        wrangler deploy --env production --compatibility-date 2024-07-20
+        wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        WRANGLER_TELEMETRY_DISABLED: 1
         
     - name: Notify completion
       run: |
