--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -48,11 +48,11 @@ jobs:
     - name: Deploy to Cloudflare Workers
       run: |
         echo "Using Wrangler version:"
-        /usr/local/bin/wrangler --version
+        wrangler --version
         echo "Deploying to production..."
-        /usr/local/bin/wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle --dry-run
+        wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle --dry-run
         echo "Dry run successful, now deploying..."
-        /usr/local/bin/wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle --skip-asset-upload
+        wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle --skip-asset-upload
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         
