--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -52,7 +52,7 @@ jobs:
         echo "Deploying to production..."
         wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle --dry-run
         echo "Dry run successful, now deploying..."
-        wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle --skip-asset-upload
+        wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         
