--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -36,31 +36,8 @@ jobs:
       env:
         WP_GRAPHQL_URL: https://backend.jvs.org.uk/graphql
         
-    - name: Build Cloudflare Workers
-      run: npx @cloudflare/next-on-pages
-      
-    - name: Create assets ignore file
-      run: |
-        cat > .vercel/output/static/.assetsignore << 'EOF'
-        _worker.js
-        *.html
-        *.rsc
-        *.rsc.json
-        _headers
-        _routes.json
-        EOF
-      
-    - name: Update Wrangler
-      run: npm install -g wrangler@latest
-      
     - name: Deploy to Cloudflare Workers
-      run: |
-        echo "Using Wrangler version:"
-        wrangler --version
-        echo "Deploying to production..."
-        wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle --dry-run
-        echo "Dry run successful, now deploying..."
-        wrangler deploy --env production --compatibility-date 2024-07-20 --no-bundle
+      run: wrangler deploy --env production
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         
