feat: Redesign membership page with better UX/UI and configure EU Mailgun email service
- Complete redesign of membership page with modern, engaging layout
- Added hero section, impact stats, testimonials, and multiple CTAs
- Enhanced visual hierarchy with gradients, cards, and hover effects
- Configured email service to use EU Mailgun region for GDPR compliance
- Updated contact and venue-hire forms to use KV store for API keys
- Added KV namespace configuration for staging environment
- Improved conversion optimization with strategic CTA placement

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -54,6 +54,11 @@ NEXT_PUBLIC_UNIFIED_EVENTS = "true"
 [env.staging]
 name = "jvs-website-staging"
 
+# KV Namespace for storing sensitive data in staging
+[[env.staging.kv_namespaces]]
+binding = "JVS_SECRETS"
+id = "7628564cb1e947908e46a7a47373c23b"
+
 [[env.staging.vars]]
 name = "WP_GRAPHQL_URL"
 value = "https://backend.jvs.org.uk/graphql"
