--- a/.github/workflows/rebuild-production.yml
+++ b/.github/workflows/rebuild-production.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         node-version: '20'
         cache: 'npm'
-        cache-dependency-path: './jvs-website/package-lock.json'
+        cache-dependency-path: 'jvs-website/package-lock.json'
         
     - name: Install dependencies
       run: npm install
