--- a/.github/workflows/rebuild-staging.yml
+++ b/.github/workflows/rebuild-staging.yml
@@ -20,7 +20,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: ./jvs-website
+        working-directory: jvs-website
     
     steps:
     - name: Checkout code
