FIX: Webhook integration - Handle repository_dispatch events properly
🐛 ISSUE IDENTIFIED:
- WordPress webhooks were failing to trigger staging deployments
- Problem: repository_dispatch events don't have github.event.inputs
- Original code was trying to access undefined inputs, causing failures

🔧 SOLUTION:
- Detect event type (repository_dispatch vs workflow_dispatch)
- Use appropriate fallback values for webhook events
- Add logging to track trigger source and parameters

✅ CHANGES:
- Handle both event types in dispatcher logic
- Set user='webhook' and reason='WordPress content update' for webhooks
- Set user='manual' fallback for workflow_dispatch without inputs
- Added console.log for debugging trigger events

🎯 RESULT:
- WordPress webhooks will now properly trigger staging deployments
- No changes needed to existing webhook configuration
- Maintains backward compatibility with manual triggers

--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -32,14 +32,21 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
+          // Handle both workflow_dispatch and repository_dispatch events
+          const isWebhook = context.eventName === 'repository_dispatch';
+          const user = isWebhook ? 'webhook' : (context.payload.inputs?.user || 'manual');
+          const reason = isWebhook ? 'WordPress content update' : (context.payload.inputs?.reason || 'Manual trigger');
+          
+          console.log(`Triggering staging rebuild - User: ${user}, Reason: ${reason}, Event: ${context.eventName}`);
+          
           await github.rest.actions.createWorkflowDispatch({
             owner: context.repo.owner,
             repo: context.repo.repo,
             workflow_id: 'rebuild-staging.yml',
             ref: 'main',
             inputs: {
-              user: '${{ github.event.inputs.user || "webhook" }}',
-              reason: '${{ github.event.inputs.reason || "WordPress content update" }}'
+              user: user,
+              reason: reason
             }
           });
           
@@ -48,14 +55,19 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
+          const user = context.payload.inputs?.user || 'manual';
+          const reason = context.payload.inputs?.reason || 'Production deployment';
+          
+          console.log(`Triggering production rebuild - User: ${user}, Reason: ${reason}`);
+          
           await github.rest.actions.createWorkflowDispatch({
             owner: context.repo.owner,
             repo: context.repo.repo,
             workflow_id: 'rebuild-production.yml',
             ref: 'main',
             inputs: {
-              user: '${{ github.event.inputs.user }}',
-              reason: '${{ github.event.inputs.reason }}',
+              user: user,
+              reason: reason,
               run_tests: 'true'
             }
           });
