FIX: Add GitHub Actions permissions for workflow dispatch
🔐 PERMISSIONS ISSUE RESOLVED:
- Webhook was triggering but failing with 403 'Resource not accessible by integration'
- GitHub requires explicit permissions for workflows to trigger other workflows
- Default GITHUB_TOKEN has limited permissions for security

✅ SOLUTION:
- Added permissions block to dispatch-rebuild job:
  - actions: write (required to trigger workflow dispatches)
  - contents: read (standard permission for checkout)

🎯 RESULT:
- WordPress webhooks can now successfully trigger staging deployments
- Maintains security by only granting necessary permissions
- No additional secrets or tokens required

--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -25,6 +25,9 @@ on:
 jobs:
   dispatch-rebuild:
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
+      contents: read
     
     steps:
     - name: Trigger Staging Rebuild
