SYNC: Update with latest changes before creating feature branch
🔄 SYNC COMMIT - Latest Changes:
- Updated package.json and package-lock.json with latest dependencies
- Enhanced public/index.html with latest meta tags and configuration
- Improved GraphQL API route with better error handling and CORS
- Updated Stripe configuration for payment processing
- Enhanced worker.js with latest Mailgun integration and CORS fixes
- Updated wrangler.toml with proper environment configurations

📁 NEW FILES:
- Added Stripe payment intent API route
- Added Stripe client library configuration
- Backup of GraphQL route for reference

🎯 PURPOSE:
- Ensure GitHub has all latest working code
- Prepare clean state for new feature branch
- Include all CORS fixes and webhook integrations
- Include all Mailgun and Stripe enhancements

This commit synchronizes the repository with the current working state before branching for major new feature development.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -54,10 +54,10 @@ NEXT_PUBLIC_UNIFIED_EVENTS = "true"
 [env.staging]
 name = "jvs-website-staging"
 
-# KV Namespace for storing sensitive data in staging
+# Separate KV Namespace for staging secrets (completely isolated from production)
 [[env.staging.kv_namespaces]]
 binding = "JVS_SECRETS"
-id = "7628564cb1e947908e46a7a47373c23b"
+id = "1bc7206c38f64ed49ed6f5e1c594ad51"
 
 [[env.staging.vars]]
 name = "WP_GRAPHQL_URL"
@@ -75,10 +75,10 @@ value = "your_wordpress_username"
 name = "WP_PASSWORD"
 value = "your_wordpress_password"
 
-# Stripe Configuration
+# Stripe Configuration - Test keys for staging
 [[env.staging.vars]]
 name = "STRIPE_PUBLISHABLE_KEY"
-value = "pk_test_XXXXXXXX" # TODO: Replace with actual Stripe test publishable key
+value = "pk_test_51OqXXXXXXXXXXXXXXX" # TODO: Replace with actual Stripe test publishable key
 
 # Feature Flags
 [[env.staging.vars]]
