--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-pdf": "^10.0.1"
+    "react-pdf": "^10.0.1",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
