--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@apollo/server": "^5.0.0",
+    "@sanity/client": "^7.8.2",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.5.0",
     "@tailwindcss/typography": "^0.5.16",
