--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
+    "dotenv": "^17.2.1",
     "form-data": "^4.0.4",
     "fs-extra": "^11.3.0",
     "graphql": "^16.11.0",
